--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,4 +1,4 @@
-user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
+user boss vero; <%# scope.lookupvar('nginx::config::nx_daemon_user') %>
 worker_processes <%= @worker_processes %>;
 worker_rlimit_nofile <%= @worker_rlimit_nofile %>;
 
